// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Atoms/Button Disabled 1`] = `
<a
  class="rpl-link rpl-button rpl-button--secondary rpl-button--disabled"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    Disabled button
  </span>
</a>
`;

exports[`RippleStoryshots Atoms/Button Primary 1`] = `
<a
  class="rpl-link rpl-button rpl-button--primary"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    Primary button
  </span>
</a>
`;

exports[`RippleStoryshots Atoms/Button Secondary 1`] = `
<a
  class="rpl-link rpl-button rpl-button--secondary"
  data-print-url="#"
  href="#"
>
  <span
    class="rpl-link__inner"
  >
    Secondary button
  </span>
</a>
`;

exports[`RippleStoryshots Atoms/Button without href 1`] = `
<button
  class="rpl-button rpl-button--primary"
>
  Button with href
</button>
`;
